# create-3d-icon

./: .dockerignore  Dockerfile  README.md  create-3d-icon.py  create.py  docker-compose.yml  pyproject.toml  server.py  ui.html
.github/workflows/: build.yml  hf-spaces.yml  test.yml
